# django_bpaml_site

./: .gitignore  LICENSE  MANIFEST.in  manage.py  meetup206_tim_django.md  pyproject.toml  requirements.txt  setup.cfg
django_bpaml_event/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_bpaml_event/migrations/: 0001_initial.py
django_bpaml_event/templates/: bpaml_home.html
django_bpaml_event/templates/allauth/layouts/: base.html
django_bpaml_event/templates/django_bpaml_event/: base.html  event.html  index.html  member.html
django_bpaml_site/: asgi.py  settings.py  urls.py  wsgi.py
