[metadata]
name = django-bpaml-event
version = 1.0.0
description = A Django app to accept registrations for upcoming events using Google login
long_description = file: README.md
url = https://bpaml.pythonator.com/bpaml-event/
author = D Tim Cummings
author_email = pythonatordev@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0.6
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0.6
    django-allauth[socialaccount] ~= 0.63.3
    psycopg >= 3.1.19
